[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
requires-python = ">=3.11"
dependencies = [
    "aioboto3>=14.3.0",
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "duckdb>=1.3.1",
    "gradio>=5.34.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "lightrag-hku==1.1.1",
    "litellm>=1.74.0",
    "nano-vectordb>=0.0.4.3",
    "ollama>=0.5.1",
    "openai>=1.87.0",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "spacy>=3.8.7",
    "speedtest-cli>=2.1.3",
    "tiktoken>=0.9.0",
    "uuid>=1.30",
]
